IMPALA-3151 Impala crash for avro table when casting to char data type

Codegen was not properly disabled in the avro scanner which caused
impala to crash. Impala-2689 addresses this issue. Backporting a specific
change to fix the impala crash.

Change-Id: I96c5656863a3e07b9c3d363780e3d123ad7ad81e
(cherry picked from commit 7f5fa96b251b7b44d475448faaed7ea210fcdf47)